fix the laclasse logo height in absolute unit because of Chrome random layout problems

--- a/public/app/css/main.scss
+++ b/public/app/css/main.scss
@@ -1000,7 +1000,7 @@ svg {
         img {
             float: left;
             display: inline-block;
-            height: 100%;
+            height: 40px;
             width: 40px;
             margin: 0;
         }
